Opção de remover nome

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <input type="text" id="nome">
     <button onclick="adicionarNome()">Adicionar Nome</button>
     <button onclick="escolherNome()">Escolher Nome</button>
+    <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Remover nome
+        </label>
+      </div>
+
 
     <h3>Nomes adicionados:</h3>
     <ul id="listaNomes"></ul>
