--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 
     <div class="container">
-      <h1>Escolha Aleatória de Nome</h1>
+      <h1>Sorteio de 1 Milhão de Reais</h1>
 
       <div class="box">
         <div>
-          <label for="nome" style="font-size: 1em; font-weight: 600;">Nome:</label>
-          <input type="text" id="nome" style="border-radius: 7px; width: 90%;height: 30px">
+          <label for="nome" style="font-size: 1em; font-weight: 600;">Insira um Nome:</label>
+          <input type="text" id="nome" style="border-radius: 7px; width: 100%;height: 30px">
         </div>
 
 
