Checkbox para switch

--- a/index.html
+++ b/index.html
@@ -23,12 +23,21 @@
           <button onclick="escolherNome()">Escolher Nome</button>
         </div>
 
-        <div class="form-check">
+        <div class="form-check form-switch">
+          <!-- From Uiverse.io by vinodjangid07  -->
+          <input type="checkbox" id="checkboxInput">
+          <label for="checkboxInput" class="toggleSwitch">
+          </label>
+          <label id="switchLabel">Remover nome sorteado.</label>
+          
+        </div>
+        
+        <!-- <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
             <label class="form-check-label" for="flexCheckDefault">
-              Remover nome após ele ganhar.
+              Remover nome sorteado.
             </label>
-        </div>
+        </div> -->
 
         <div style="align-self: flex-start;">
           <h3>Nomes no Sorteio Atual:</h3>
